# vertical-association

./: README.md
contract_membership_delegated_partner/: README.rst  __manifest__.py
contract_membership_delegated_partner/i18n/: contract_membership_delegated_partner.pot  de.po  es.po
contract_membership_delegated_partner/readme/: CONTRIBUTORS.md  DESCRIPTION.md  INSTALL.md  USAGE.md
contract_membership_delegated_partner/tests/: test_delegated_partner_contract.py
membership_delegated_partner/: README.rst  __manifest__.py
membership_delegated_partner/i18n/: bs.po  fr.po  hr.po  hr_HR.po  it.po  lt.po  membership_delegated_partner.pot  pl.po  pt_BR.po  ru.po  sl.po
membership_delegated_partner/readme/: CONFIGURE.md  CONTRIBUTORS.md  DESCRIPTION.md  USAGE.md
membership_delegated_partner/tests/: test_membership_delegate.py
membership_delegated_partner/views/: account_move.xml
membership_extension/: README.rst  __manifest__.py
membership_extension/demo/: membership_category_demo.xml
membership_extension/i18n/: fr.po  membership_extension.pot
membership_extension/models/: membership_category.py  membership_line.py  product_product.py
membership_extension/tests/: test_membership.py
membership_extension/views/: product_product_view.xml  product_template_view.xml
setup/_metapackage/: pyproject.toml
website_membership_gamification/: README.rst  __manifest__.py
website_membership_gamification/i18n/: website_membership_gamification.pot
website_membership_gamification/readme/: USAGE.md  (+3 more)
website_membership_random_order/: README.rst  __manifest__.py
(+15 files in other folders)
